--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="col-sm-4">
       <h2>About Me</h2>
       <h5></h5>
-	  <img src="img/taylor-pic-354x704.jpg" alt="Me" class="center" />
+	  <img src="img/taylor-pic-354x704.JPG" alt="Me" class="center" />
       <div class="img"></div>
       <p>My name is <b>Elijah Taylor</b> and im <sub>21 </sub>years old..</p>
       <h3>Helpful Things Used:</h3>
